Fixed gap between title and text in the column.

--- a/components/Columns.module.scss
+++ b/components/Columns.module.scss
@@ -93,7 +93,7 @@
 .text {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 0.5rem;
 
 	* {
 		text-wrap: balance;
